--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
       </div>
      </li>
      <li class="nav-item">
-      <a class="nav-link btn" data-toggle="dropdown" href="/">
+      <a class="nav-link btn" data-toggle="dropdown" href="/introduction">
        Products &amp; services
       </a>
       <div class="dropdown-menu">
