--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
    <div class="banner-text">
     <div class="row">
      <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-responsive" src="images/Home-Logo.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
      </div>
      <div class="col">
       <h1>
@@ -151,7 +151,7 @@
      </p>
     </div>
     <div class="col-md-6">
-     <img alt="ESI Asia Pacific Pty Ltd" class="img-responsive" src="images/Home-Article.jpg"/>
+     <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Article.jpg"/>
     </div>
    </div>
   </main>
