--- a/transition.html
+++ b/transition.html
@@ -115,7 +115,7 @@
    <div class="banner-text">
     <div class="row">
      <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-responsive" src="images/Home-Logo.png"/>
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
      </div>
      <div class="col">
       <h1>
