--- a/senior.html
+++ b/senior.html
@@ -203,32 +203,57 @@
      </p>
     </div>
    </div>
-
-   <s class="our-team-content">
+   <div class="our-team-content">
     <div class="our-team-image-column">
-     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>
+<!--     <img alt="Ian Connor" class="img-responsive" src="images/Ian.png"/>-->
     </div>
     <div class="text-column our-team-text-column">
      <h3>
-      Ian Connor
+      Peter Briede
      </h3>
      <h5>
-      Chief Technology Officer (CTO)
+      Delivery
      </h5>
      <p>
-      Ian is an experienced CTO and entrepreneur. He has spent over 20 years in the USA, Europe and Australia, refining and implementing processes required to build software and manage software teams the right way.
+      Peter Briede has had a successful career in introducing new technology and solutions into Australia and building the framework for delivery and support it in Australia.
      </p>
      <p>
-      Previously, Ian was CTO and co-founder of Pubget Inc. based in Boston, USA, a research platform serving researchers and clinicians at over 600 hospitals and research institutions worldwide. Pubget grew from serving local entities, like Harvard University, MIT, and Massachusetts General Hospital - to support various worldwide organizations - from Fortune 500 companies and the top-10 universities to biotechs and individual research groups. The Copyright Clearance Center acquired Pubget.
+      A career electrical engineer with diverse cross-industry experience and proven track record in successful application of electrical engineering, bringing the knowledge and experience but also the necessary attitude and attributes to drive electrical safety, reliability, and compliance.
      </p>
      <p>
-      Post-acquisition, Ian moved back to Brisbane, Australia, where he continues to follow test-driven development "TDD" and advocate lean startup methodologies. Ian has also spent over a year as a senior consultant in an electric vehicle charging manufacturing company. The initial goals were around helping increase their velocity and quality through DevOps and Testing. It evolved to include everything from firmware and credit card processing to grid monitoring and power electronics performance and monitoring.
+      He has extensive experience in the application of electrical engineering across the construction materials, defence, telecommunications, and waste industries with readily transferable and proven experience with the leading aggregates producer in Australia and globally.
      </p>
      <p>
-      Software Skills: Python, C/C++, Tensorflow, AWS, git, DevOps, Typescript, Javascript, Java, and a big fan of continuous integration, testing frameworks, static analysis, electronics, and agile development. Specialties: scientific and artificial intelligence software development. Ian holds degrees in Physics/Maths and Law.
+      Peter holds a current Certificate of Registration with Engineers Australia NER and RPEQ.
      </p>
     </div>
-   </s>
+   </div>
+   <div class="our-team-content">
+    <div class="our-team-image-column">
+     <img alt="Pamela Jones" class="img-responsive" src="images/pamela-cropped.png"/>
+    </div>
+    <div class="our-team-text-column text-column">
+     <img class="our-team-text-img" src="images/pamela-cropped.png">
+     <h3>
+      Pamela Jones
+     </h3>
+     <h5>
+      Financial Control
+     </h5>
+     <p>
+      Pamela Jones is an internationally experienced Chartered Accountant who has worked in multiple jurisdictions globally, with 22 years’ experience, of which 18 years has been in Australia and other Asia Pacific regions.
+     </p>
+     <p>
+      Pamela has worked as a professional accountant in senior management positions with leading global firms internationally including, Grant Thornton (South Africa), Baker Tilly International (NZ) and in Australia with Hanrick Curran (now Mazars Australia).
+     </p>
+     <p>
+      Pamela has extensive experience in multiple accounting and tax jurisdictions (at both State and Federal levels).
+     </p>
+     <p>
+      Pamela is a Chartered Accountant with Honours Degrees in Accounting, Commerce and Taxation from the University of Exeter (UK) and UNISA (South Africa).
+     </p>
+    </div>
+   </div>
   </main>
   <footer>
    <section class="contact">
