--- a/board.html
+++ b/board.html
@@ -174,6 +174,7 @@
      <img alt="Peter Brindley" class="img-responsive" src="images/Brindley.png"/>
     </div>
     <div class="text-column our-team-text-column">
+     <img class="our-team-text-img" src="images/Brindley.png">
      <h3>
       Peter Brindley
      </h3>
@@ -196,6 +197,7 @@
      <img alt="Stuart Parry" class="img-responsive" src="images/Stuart.png"/>
     </div>
     <div class="text-column our-team-text-column">
+     <img class="our-team-text-img" src="images/Stuart.png">
      <h3>
       Stuart Parry
      </h3>
