--- a/introduction.html
+++ b/introduction.html
@@ -194,7 +194,7 @@
      Munich RE 10 year warranty
     </li>
     <li>
-     Wide operating range - 5C to 50C
+     Wide operating range - 5°C to 50°C
     </li>
     <li>
      Non-toxic, non-flammable, 100% recyclable
@@ -209,17 +209,17 @@
      Energy can be stored charged for extended periods and not lose charge
     </li>
     <li>
-     Suitable for close proximity to residential areas as well as in remote and inhospitable conditions.
+     Suitable for close-proximity to residential areas as well as in remote and inhospitable conditions.
     </li>
    </ul>
-   <div class="text-column chemistry-header">
-    <h3>
-     Exceeding the market’s requirements... and expectations
-    </h3>
-   </div>
-   <p>
-    ESIAP is transforming the value proposition for long duration energy storage.
-   </p>
+<!--   <div class="text-column chemistry-header">-->
+<!--    <h3>-->
+<!--     Exceeding the market’s requirements... and expectations-->
+<!--    </h3>-->
+<!--   </div>-->
+<!--   <p>-->
+<!--    ESIAP is transforming the value proposition for long duration energy storage.-->
+<!--   </p>-->
   </main>
   <footer>
    <section class="contact">
