--- a/index.html
+++ b/index.html
@@ -17,61 +17,34 @@
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <script src="js/sidebar.js" defer></script>
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
   <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
-     <span class="navbar-toggler-icon">
-     </span>
-    </button>
+    <a class="navbar-brand" href="/" style="align-self: flex-start"><img class="navbar-logo" src="images/Home-Logo.png" alt="Energy Storage Industries - Asia Pacific"></a>
+    <a onclick="openSidebar()" class="sidebar-menu" aria-expanded="false" aria-label="Toggle navigation" href="#">
+     <span class="navbar-toggler-icon"> </span>
+    </a>
+<!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
-       <a class="nav-link btn" href="/">
-        Home
-       </a>
+       <a class="nav-link btn" href="/">Home</a>
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/board">
-          Board
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/senior">
-          Senior Mangement
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/environment">
-          Environment, Social
-          <br/>
-          and Governance
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/careers">
-          Careers
-         </a>
-        </li>
+        <li><a class="dropdown-item btn btn-sub" href="/board">Board</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/senior">Senior Mangement</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/environment">Environment, Social<br/>and Governance</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/careers">Careers</a></li>
        </ul>
       </li>
       <li class="nav-item dropdown">
@@ -79,38 +52,13 @@
         Products &amp; services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/transition">
-          Energy Transition
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/chemistry">
-          Chemistry
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/solutions">
-          Solutions
-         </a>
-        </li>
+        <li><a class="dropdown-item btn btn-sub" href="/introduction">Introduction</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/transition">Energy Transition</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/chemistry">Chemistry</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/solutions">Solutions</a></li>
        </ul>
       </li>
       <li class="nav-item dropdown">
@@ -118,49 +66,85 @@
         Operations
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/maryborough">
-          Maryborough
-         </a>
-        </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <li><a class="dropdown-item btn btn-sub" href="/maryborough">Maryborough</a></li>
+        <li><div class="dropdown-divider"></div></li>
+        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>
        </ul>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="https://press.esiap.com.au">
-        News and media
-       </a>
+       <a class="nav-link btn" href="https://press.esiap.com.au">News and media</a>
       </li>
       <li class="nav-item">
-       <a class="nav-link btn" href="/contact">
-        Contact
-       </a>
+       <a class="nav-link btn" href="/contact">Contact</a>
       </li>
      </ul>
     </div>
+<!--    MOBILE SIDEBAR HERE-->
+    <div id="mobileSidebar" class="sidebar">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+       <li class="nav-item">
+        <a class="nav-link btn" href="/">Home</a>
+       </li>
+       <li class="nav-item dropdown">
+        <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+         About Us
+        </a>
+        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+         <li><a class="dropdown-item btn btn-sub" href="/board">Board</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/senior">Senior Mangement</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/environment">Environment, Social<br/>and Governance</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/careers">Careers</a></li>
+        </ul>
+       </li>
+       <li class="nav-item dropdown">
+        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+         Products &amp; services
+        </a>
+        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+         <li><a class="dropdown-item btn btn-sub" href="/introduction">Introduction</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/transition">Energy Transition</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/chemistry">Chemistry</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/solutions">Solutions</a></li>
+        </ul>
+       </li>
+       <li class="nav-item dropdown">
+        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+         Operations
+        </a>
+        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+         <li><a class="dropdown-item btn btn-sub" href="/maryborough">Maryborough</a></li>
+         <li><div class="dropdown-divider"></div></li>
+         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>
+        </ul>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link btn" href="https://press.esiap.com.au">News and media</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link btn" href="/contact">Contact</a>
+       </li>
+      </ul>
+    </div>
+   <div id="blocker" class="page-blocker" onclick="closeSidebar()"></div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
+<!--END NAVBAR-->
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col" style="text-align: right; width: 40%; flex: unset">
+      <img style="padding-right: 30px; margin-left: auto" alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
      </div>
-     <div class="col">
+     <div class="col" style="width: 60%; flex: unset; padding-left: 30px; padding-top: 10px">
       <h1>
        Our renewable
        <br/>
-       energy future
-      </h1>
-      <h1>
-       — today
+       energy future — today
       </h1>
      </div>
     </div>
